<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <!-- Activity titles -->
    <string name="app_name">Station Millenium</string>
    <string name="player_activity_title">Player Live Millenium</string>
	<string name="preferences_activity_title">Paramètres</string>
    <string name="replay_activity_title">Le replay</string>
    <string name="antenna_grid_activity_title">La grille des programmes</string>
    <string name="links_activity_title">Les liens Millenium</string>
    
    <!-- menu entries -->
    <string name="action_settings">Paramètres</string>
    <string name="action_reload_page">Recharger la page</string>
    
    <!-- player texts -->
    <string name="player_currently_playing">Actuellement à l\'antenne</string>
    <string name="player_last_played_titles"><u><b>Les 5 derniers titres diffusés :</b></u></string>
    <string name="player_network_unavailable">Pas de connexion à Internet</string>
    <string name="player_network_error">Erreur réseau</string>
    <string name="player_current_title">%1$s - %2$s</string>
    <string name="player_no_title">Station Millenium</string>
    <string name="player_no_wifi">Connecter le Wifi pour écouter la radio</string>
    <string name="player_error">Impossible de lire la radio</string>
    <string name="player_play">Lecture</string>
    <string name="player_pause">Pause</string>
    <string name="player_stop">Stop</string>
    <string name="player_loading_toast">Player Millenium : chargement&#8230;</string>
    <string name="player_play_toast">Player Millenium : lecture&#8230;</string>
    <string name="player_pause_toast">Player Millenium : pause&#8230;</string>
    <string name="player_stop_toast">Player Millenium : stop&#8230;</string>
    <string name="player_notification_time">%1$s:%2$s</string>
    <string name="player_loading">Chargement en cours&#8230;</string>
    
    <!-- playing notification -->
    <string name="notification_ticker_text">Lecture de la radio&#8230;</string>
    <string name="player_current_title_notification">Actuellement : %1$s - %2$s</string>
    <string name="player_current_title_unavailable_notification">Actuellement : Station Millenium</string>
    <string name="player_notification_play">Lecture</string>
    <string name="player_notification_pause">Pause</string>
    <string name="player_notification_loading">Chargement</string>
    
    <!-- player widget -->
    <string name="player_widget_loading">Chargement&#8230;</string>
    <string name="player_widget_title">Station Millenium</string>
    
    <!-- preferences -->
    <string name="preferences_player_category">Player Live</string>
    <string name="preferences_player_wifi_only_summary_on">La radio sera lue uniquement en Wifi</string>
    <string name="preferences_player_wifi_only_summary_off">La radio sera lue en Wifi et en 3G</string>
    <string name="preferences_player_wifi_only">Uniquement en Wifi</string>
	<string name="preferences_player_autostart">Démarrer la lecture automatiquement</string>
	<string name="preferences_player_autostart_summary">Démarrer la lecture de la radio automatiquement lors de l\'affichage du player</string>
	<string name="preferences_links">Liens Millenium</string>
	<string name="preferences_links_tweets_number">Nombre de dernières news</string>
	<string name="preferences_links_tweets_number_summary">Nombre de dernières news à afficher</string>
	<string-array name="preferences_links_tweets_number_values">
	    <item name="1">1 news</item>
	    <item name="2">2 news</item>
	    <item name="3">3 news</item>
	    <item name="4">4 news</item>
	    <item name="5">5 news</item>
	    <item name="6">6 news</item>
	    <item name="7">7 news</item>
	    <item name="8">8 news</item>
	    <item name="9">9 news</item>
	    <item name="10">10 news</item>
	    <item name="11">11 news</item>
	    <item name="12">12 news</item>
	    <item name="13">13 news</item>
	    <item name="14">14 news</item>
	    <item name="15">15 news</item>
	    <item name="16">16 news</item>
	    <item name="17">17 news</item>
	    <item name="18">18 news</item>
	    <item name="19">19 news</item>
	    <item name="20">20 news</item>
	</string-array>
	<string-array name="preferences_links_tweets_number_values_internal">
	    <item name="1">1</item>
	    <item name="2">2</item>
	    <item name="3">3</item>
	    <item name="4">4</item>
	    <item name="5">5</item>
	    <item name="6">6</item>
	    <item name="7">7</item>
	    <item name="8">8</item>
	    <item name="9">9</item>
	    <item name="10">10</item>
	    <item name="11">11</item>
	    <item name="12">12</item>
	    <item name="13">13</item>
	    <item name="14">14</item>
	    <item name="15">15</item>
	    <item name="16">16</item>
	    <item name="17">17</item>
	    <item name="18">18</item>
	    <item name="19">19</item>
	    <item name="20">20</item>
	</string-array>
	<string name="preferences_alarm_screen">Alarme</string>
	<string name="preferences_alarm_enable">Activer l\'alarme</string>
	<string name="preferences_alarm_enabled">Alarme activée</string>
	<string name="preferences_alarm_disabled">Alarme désactivée</string>
	<string name="preferences_alarm_repeat">Répétitions</string>
	<string name="preferences_alarm_time">Heure</string>
	<string name="preferences_alarm_set">Sauvegarder</string>
	<string name="preferences_alarm_cancel">Annuler</string>
	<string name="preferences_alarm_no_time">Heure non définie</string>
	<string name="preferences_alarm_time_set">Heure définie : %1$s</string>
	<string name="preferences_alarm_no_time">Heure non définie</string>
	<string name="preferences_alarm_activation_days">Jours</string>
	<string name="preferences_alarm_activation_days_no_selection">Aucun jour sélectionné</string>
	<string name="preferences_alarm_activation_days_separator">,</string>
	<string-array name="preferences_alarm_days">
	    <item name="0">Lundi</item>
	    <item name="1">Mardi</item>
	    <item name="2">Mercredi</item>
	    <item name="3">Jeudi</item>
	    <item name="4">Vendredi</item>
	    <item name="5">Samedi</item>
	    <item name="6">Dimanche</item>
	</string-array>
	<string-array name="preferences_alarm_days_values">
	    <item name="0">0</item>
	    <item name="1">1</item>
	    <item name="2">2</item>
	    <item name="3">3</item>
	    <item name="4">4</item>
	    <item name="5">5</item>
	    <item name="6">6</item>
	</string-array>
	<string name="preferences_alarm_volume_title">Volume de l\'alarme</string>
	<string name="preferences_alarm_volume_dialog_message">Sélectionner le volume du son de l\'alarme :</string>
	<string name="preferences_alarm_volume_progress_text_suffix">sur %1$s</string>
	<string name="preferences_alarm_volume_summary">%1$s sur %2$s</string>
	<string name="preferences_app_version">Version de l\'application</string>
	<string name="preferences_app_version_not_available">Station Millenium</string>
	<string name="preferences_alarm_network_available_summary">Pour que l\'alarme puisse fonctionner, le Wifi ou les données mobiles doivent être activés.</string>
	<string name="preferences_about">A propos</string>
	
	<!-- links -->
	<string name="links_latest_news"><u><b>Dernières news</b></u></string>
	
	<!-- other resources -->
	<string name="empty_string"></string>
	<string name="webview_error">Erreur sur le replay : %1$s</string>
	
	<!-- alarm -->
	<string name="alarm_set">Alarme Station Millenium activée %1$s prochain à %2$sh%3$s</string>
	<string name="alarm_set_same_day">Alarme Station Millenium activée à %1$sh%2$s</string>
	<string name="alarm_triggered">Alarme Station Millenium déclenchée</string>
	<string name="alarm_already_triggered">Alarme Station Millenium : radio déjà en cours de lecture</string>
	<string name="alarm_no_time_set">Pas d\'heure définie pour l\'alarme Station Millenium</string>
	
	<!-- song search history -->
	<string name="song_search_history">C\'était quoi ?</string>
	<string name="song_search_history_image">C\'était quoi ?</string>
	<string name="song_search_no_data">Aucune donnée disponible</string>
	<string name="song_search_no_image">Aucune image disponible pour ce titre</string>
	<string name="song_search_intro_text">&lt;b&gt;%1$s&lt;/b&gt; résultats trouvés pour &lt;i&gt;%2$s&lt;/i&gt;</string>
	<string name="song_search_intro_text_no_search">&lt;b&gt;%1$s&lt;/b&gt; résultats</string>
	<string name="song_search_image_title">%1$s - %2$s</string>
	<string name="song_search_time_intro_text">&lt;b&gt;%1$s&lt;/b&gt; résultats trouvés pour le &lt;i&gt;%2$s&lt;/i&gt;</string>
	
	<!-- song search history search interface -->
	<string name="song_search_history_search_hint">Recherche artistes/titres</string>
    <string name="song_search_history_menu_search">Recherche</string>
    <string name="song_search_history_menu_reinit">Réinitialiser&#8230;</string>
    <string name="song_search_history_menu_time_search">Recherche par date</string>
    <string name="song_search_history_menu_time_search_select_date">Sélectionner une date</string>
    <string name="song_search_history_menu_time_search_select_time">Sélectionner une heure</string>
    
</resources>